# MedHelper

./: .gitignore  HeartML.ipynb  README.md  pyproject.toml
med_project/: __init__.py
med_project/account/: admin.py  apps.py  backends.py  filters.py  forms.py  models.py  models_.py  models_old.py  permissions.py  renderers.py  serializers.py  signals.py  urls.py  views.py
med_project/account/migrations/: 0001_initial.py  0002_auto_20201112_1601.py  0002_auto_20210220_1910.py  0002_profile.py  0003_auto_20201112_1605.py  0003_auto_20201213_1907.py  0004_auto_20201112_2323.py  0005_auto_20201112_2326.py  0006_auto_20201112_2337.py  0007_auto_20201112_2341.py  0008_auto_20201112_2343.py  0009_remove_baseuser_user_status.py  0010_baseuser_user_type.py
med_project/account/templates/: PatientRegister.html  register.html
med_project/account_/: admin.py  apps.py  models.py  serializers.py
med_project/account_/migrations/: 0001_initial.py
med_project/assignment/: models.py  renderers.py  serializers.py  urls.py  views.py
med_project/assignment/migrations/: 0001_initial.py  0002_assignment_used_for_predictions.py  0002_auto_20201207_2113.py  0003_auto_20201207_2144.py  0003_auto_20210220_1956.py  0004_auto_20201207_2221.py  0005_auto_20201207_2247.py  (+10 more)
med_project/med_project/: settings.py  urls.py
med_project/popup_messeges/: apps.py  models.py  serializers.py  urls.py  views.py
med_project/recommendation/: views.py
med_project/requests/: models.py  request_actions.py  serializers.py  urls.py  views.py
med_project/testdb/: models.py
react/: .eslintcache  .gitignore  package-lock.json  package.json
react/public/: index.html
react/src/: App.css  App.js  axiosApi.js  index.css  index.css.map  index.js  index.scss
(+79 files in other folders)
